# F-MM1

./: .gitignore  CMakeLists.txt  Definitions.h  README.md  ResourceIdentifiers.h  main.cpp
Docs/reverse engineering info/: Read.me  graphics-files-struct.txt  mazedata-file-struct.txt  mm-exe-item-list.txt  mm-exe-monster-list.txt  mm-exe-spell-list.txt  ovr-file-struct.txt  party.txt  roster-file-struct.txt
core/: Application.cpp  Application.h  MultiLangManager.cpp  MultiLangManager.h  MusicPlayer.cpp  MusicPlayer.h  ResourceManager.cpp  ResourceManager.h  State.h  StateManager.cpp  StateManager.h
gui/: Button.cpp  Button.h  Face.cpp  Face.h  GUI.cpp  GUI.h  MessageBox.cpp  MessageBox.h  Utility.cpp  Utility.h
media/localization/: MultiLangIdentifiers.h  strings_ENG.txt  strings_RUS.txt
mm1-render/: MAZEDATA.DTA  MazeRenderer.h  MazeRenderer2D.cpp  MazeRenderer3D.cpp  Read.me  a.out  testrender.cpp
model/: GameModel.cpp  GameModel.h  ModelDefinitions.h  character.cpp  character.h  items.cpp  items.h  monsters.cpp  monsters.h  party.cpp  party.h  roster.cpp  roster.h  spells.cpp  spells.h
model/maps/: map.cpp  map.h  mapdata.h  maze.h  maze00.cpp  maze00.h  maze01.cpp  maze01.h  maze02.cpp  maze02.h  maze03.cpp  maze03.h  (+46 more)
render/: MapSprite (копия).h  MapSprite.h  MazeRender.cpp  MazeRender.h
save/: ROSTER.DTA
states/: CharacterDetailState.cpp  CharacterDetailState.h  GameState.cpp  GameState.h  ItemState.cpp  ItemState.h  MenuState.cpp  MenuState.h  QuickRefState.cpp  QuickRefState.h  TitleState.cpp  TitleState.h  ViewAllCharState.cpp  ViewAllCharState.h
(+5 files in other folders)
